--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     -->
 
 <body>
-    <section class="header">
+    <header class="header">
         <div class="container">
             <div class="wrapper">
                 <div class="logo">
@@ -51,7 +51,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </header>
     <section class="hero">
         <div class="container">
 
