modified:   assets/css/main.css 	modified:   assets/css/main.css.map 	modified:   assets/css/scss/_normalize.scss 	modified:   assets/css/scss/main.scss 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -52,9 +52,32 @@
             </div>
         </div>
     </header>
-    <section class="hero">
+    <section class="main">
         <div class="container">
-
+            <div class="wrapper">
+                <div class="hero">
+                    <div class="hero__title">
+                        <h2>
+                            Discover Collect And Sell Rare NFTs
+                        </h2>
+                    </div>
+                    <div class="wrapper-btn">
+                        <div class="hero__btn">
+                            <a href="#">
+                                <p>
+                                    Connect Wallet
+                                </p>
+                            </a>
+                        </div>
+                        <div class="background"></div>
+                    </div>
+                </div>
+                <div class="subtitle">
+                    <p>
+                        Landing Pages for Futuristic Crypto Projects and NFTs Collections
+                    </p>
+                </div>
+            </div>
         </div>
     </section>
     <section class="supports">
