modified:   assets/css/main.css 	modified:   assets/css/main.css.map 	modified:   assets/css/scss/main.scss 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header class="header">
         <div class="container">
-            <div class="wrapper">
+            <div class="content-wrapper">
                 <div class="logo">
                     <img src="./assets/img/logo.svg" alt="NFTs">
                 </div>
@@ -55,27 +55,39 @@
     <section class="main">
         <div class="container">
             <div class="wrapper">
-                <div class="hero">
-                    <div class="hero__title">
-                        <h2>
-                            Discover Collect And Sell Rare NFTs
-                        </h2>
-                    </div>
-                    <div class="wrapper-btn">
-                        <div class="hero__btn">
-                            <a href="#">
-                                <p>
-                                    Connect Wallet
-                                </p>
-                            </a>
+                <div class="content-wrapper">
+                    <div class="hero">
+                        <div class="hero__title">
+                            <h2>
+                                Discover Collect And Sell Rare NFTs
+                            </h2>
                         </div>
-                        <div class="background"></div>
+                        <div class="wrapper-btn">
+                            <div class="hero__btn">
+                                <a href="#">
+                                    <p>
+                                        Connect Wallet
+                                    </p>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="subtitle">
+                        <p>
+                            Landing Pages for Futuristic Crypto Projects and NFTs Collections
+                        </p>
                     </div>
                 </div>
-                <div class="subtitle">
-                    <p>
-                        Landing Pages for Futuristic Crypto Projects and NFTs Collections
-                    </p>
+                <div class="cards">
+                    <div class="cards__item">
+
+                    </div>
+                    <div class="cards__item">
+
+                    </div>
+                    <div class="cards__item">
+
+                    </div>
                 </div>
             </div>
         </div>
