modified:   assets/css/main.css 	modified:   assets/css/main.css.map 	modified:   assets/css/scss/main.scss 	new file:   assets/img/cards1.svg 	new file:   assets/img/cards2.svg 	new file:   assets/img/cards3.svg 	new file:   assets/img/verification.svg 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -78,15 +78,107 @@
                         </p>
                     </div>
                 </div>
-                <div class="cards">
-                    <div class="cards__item">
-
-                    </div>
-                    <div class="cards__item">
-
-                    </div>
-                    <div class="cards__item">
-
+                <div class="wrapper-card">
+                    <div class="content-wrapper">
+                        <div class="cards bottom">
+                            <div class="cards__item">
+                                <div class="cards__item-img">
+                                    <img src="./assets/img/cards1.svg" alt="Фото">
+                                </div>
+                                <div class="wrapper">
+                                    <div class="cards__title content-wrapper">
+                                        <div class="cards__title-name">
+                                            <p>
+                                                Random Name
+                                            </p>
+                                        </div>
+                                        <div class="cards__title-price">
+                                            <p>
+                                                4.52 ETH
+                                            </p>
+                                        </div>
+                                    </div>
+                                    <div class="cards__subtitle content-wrapper">
+                                        <div class="cards__subtitle-numder_user">
+                                            <p>
+                                                #4472346
+                                            </p>
+                                        </div>
+                                        <div class="cards__subtitle-numder">
+                                            <p>
+                                                #4472346
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="cards">
+                            <div class="cards__item">
+                                <div class="cards__item-img">
+                                    <img src="./assets/img/cards2.svg" alt="Фото">
+                                </div>
+                                <div class="wrapper">
+                                    <div class="cards__title content-wrapper">
+                                        <div class="cards__title-name">
+                                            <p>
+                                                Random Name
+                                            </p>
+                                        </div>
+                                        <div class="cards__title-price">
+                                            <p>
+                                                4.52 ETH
+                                            </p>
+                                        </div>
+                                    </div>
+                                    <div class="cards__subtitle content-wrapper">
+                                        <div class="cards__subtitle-numder_user">
+                                            <p>
+                                                #4472346
+                                            </p>
+                                        </div>
+                                        <div class="cards__subtitle-numder">
+                                            <p>
+                                                #4472346
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="cards top">
+                            <div class="cards__item">
+                                <div class="cards__item-img">
+                                    <img src="./assets/img/cards3.svg" alt="Фото">
+                                </div>
+                                <div class="wrapper">
+                                    <div class="cards__title content-wrapper">
+                                        <div class="cards__title-name">
+                                            <p>
+                                                Random Name
+                                            </p>
+                                        </div>
+                                        <div class="cards__title-price">
+                                            <p>
+                                                4.52 ETH
+                                            </p>
+                                        </div>
+                                    </div>
+                                    <div class="cards__subtitle content-wrapper">
+                                        <div class="cards__subtitle-numder_user">
+                                            <p>
+                                                #4472346
+                                            </p>
+                                        </div>
+                                        <div class="cards__subtitle-numder">
+                                            <p>
+                                                #4472346
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
