modified:   assets/css/main.css 	modified:   assets/css/main.css.map 	modified:   assets/css/scss/_variables.scss 	modified:   assets/css/scss/main.scss 	renamed:    assets/img/cards1.svg -> assets/img/cards/cards1.svg 	renamed:    assets/img/cards2.svg -> assets/img/cards/cards2.svg 	renamed:    assets/img/cards3.svg -> assets/img/cards/cards3.svg 	new file:   assets/img/supports/icon1.svg 	new file:   assets/img/supports/icon2.svg 	new file:   assets/img/supports/icon3.svg 	new file:   assets/img/supports/icon4.svg 	new file:   assets/img/supports/icon5.svg 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </header>
     <section class="main">
         <div class="container">
-            <div class="wrapper">
+            <di v class="wrapper">
                 <div class="content-wrapper">
                     <div class="hero">
                         <div class="hero__title">
@@ -83,7 +83,7 @@
                         <div class="cards bottom">
                             <div class="cards__item">
                                 <div class="cards__item-img">
-                                    <img src="./assets/img/cards1.svg" alt="Фото">
+                                    <img src="./assets/img/cards/cards1.svg" alt="Фото">
                                 </div>
                                 <div class="wrapper">
                                     <div class="cards__title content-wrapper">
@@ -116,7 +116,7 @@
                         <div class="cards">
                             <div class="cards__item">
                                 <div class="cards__item-img">
-                                    <img src="./assets/img/cards2.svg" alt="Фото">
+                                    <img src="./assets/img/cards/cards2.svg" alt="Фото">
                                 </div>
                                 <div class="wrapper">
                                     <div class="cards__title content-wrapper">
@@ -149,7 +149,7 @@
                         <div class="cards top">
                             <div class="cards__item">
                                 <div class="cards__item-img">
-                                    <img src="./assets/img/cards3.svg" alt="Фото">
+                                    <img src="./assets/img/cards/cards3.svg" alt="Фото">
                                 </div>
                                 <div class="wrapper">
                                     <div class="cards__title content-wrapper">
@@ -181,12 +181,86 @@
                         </div>
                     </div>
                 </div>
-            </div>
+                <div class="wrapper-cost">
+                    <div class="content-wrapper grid">
+                        <div class="cost bottom-right">
+                            <div class="cost__item">
+                                <div class="cost__title">
+                                    <h2>
+                                        23.66 ETH
+                                    </h2>
+                                </div>
+                                <div class="cost__subtitle">
+                                    <p>
+                                        Random Name
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="cost bottom-left">
+                            <div class="cost__item">
+                                <div class="cost__title">
+                                    <h2>
+                                        324.56 ETH
+                                    </h2>
+                                </div>
+                                <div class="cost__subtitle">
+                                    <p>
+                                        Random Name
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="cost top-right">
+                            <div class="cost__item">
+                                <div class="cost__title">
+                                    <h2>
+                                        324.56 ETH
+                                    </h2>
+                                </div>
+                                <div class="cost__subtitle">
+                                    <p>
+                                        Random Name
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </di>
         </div>
     </section>
     <section class="supports">
         <div class="container">
-
+            <div class="wrapper">
+                <div class="content-wrapper contrib">
+                    <div class="contrib__place-Bitcoin">
+                        <div class="contrib__name Bitcoin">
+                            <p>Bitcoin</p>
+                        </div>
+                    </div>
+                    <div class="contrib__place-Etherum">
+                        <div class="contrib__name">
+                            <p>Etherum</p>
+                        </div>
+                    </div>
+                    <div class="contrib__place-Dfinity">
+                        <div class="contrib__name">
+                            <p>Dfinity</p>
+                        </div>
+                    </div>
+                    <div class="contrib__place-BitcoinCash">
+                        <div class="contrib__name">
+                            <p>Bitcoin Cash</p>
+                        </div>
+                    </div>
+                    <div class="contrib__place-Cryptocom">
+                        <div class="contrib__name">
+                            <p>Crypto.com</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
     <section class="NFT-carousel">
