modified:   assets/css/main.css 	modified:   assets/css/main.css.map 	new file:   assets/css/owl.carousel.css 	modified:   assets/css/scss/main.scss 	new file:   assets/img/carousel/img1.svg 	new file:   assets/img/carousel/img2.svg 	new file:   assets/img/carousel/img3.svg 	new file:   assets/img/carousel/img4.svg 	new file:   assets/img/carousel/img5.svg 	modified:   assets/js/main.js 	new file:   assets/js/owl.carousel.js 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title></title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="./assets/css/owl.carousel.css">
     <link href="./assets/css/main.css" rel="stylesheet">
 </head>
 <!-- 
@@ -265,8 +266,58 @@
     </section>
     <section class="NFT-carousel">
         <div class="container">
-
+            <div class="wrapper">
+                <div class="tranding">
+                    <div class="tranding__title">
+                        <h2>
+                            Find Trading NFT Items
+                        </h2>
+                    </div>
+                    <div class="tranding__subtitle">
+                        <p>
+                            Amet minim mollit non deserunt
+                            ullamco est sit aliqua dolor do amet sint.
+                            Velit officia consequat.
+                        </p>
+                    </div>
+                </div>
+            </div>
         </div>
+        <div class="container">
+            <div class="owl-carousel owl-theme owl-loaded">
+                <div class="owl-stage-outer">
+                    <div class="owl-stage">
+                        <div class="owl-item">
+                            <div class="owl-item__img">
+                                <img src="./assets/img/carousel/img1.svg" alt="награда">
+                            </div>
+                        </div>
+                        <div class="owl-item">
+                            <div class="owl-item__img">
+                                <img src="./assets/img/carousel/img2.svg" alt="награда">
+                            </div>
+                        </div>
+                        <div class="owl-item">
+                            <div class="owl-item__img">
+                                <img src="./assets/img/carousel/img3.svg" alt="награда">
+                            </div>
+                        </div>
+                        <div class="owl-item">
+                            <div class="owl-item__img">
+                                <img src="./assets/img/carousel/img4.svg" alt="награда">
+                            </div>
+                        </div>
+                        <div class="owl-item">
+                            <div class="owl-item__img">
+                                <img src="./assets/img/carousel/img5.svg" alt="награда">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
     </section>
     <section class="selectors">
         <div class="container">
@@ -279,6 +330,8 @@
         </div>
     </section>
 </body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+<script src="./assets/js/owl.carousel.js"></script>
 <script src="./assets/js/main.js"></script>
 
 </html>
