--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
     </section>
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-<!-- <script src="./assets/js/owl.carousel.js"></script> -->
+<script src="./assets/js/owl.carousel.js"></script>
 <script src="./assets/js/main.js"></script>
 
 </html>
