modified:   assets/css/main.css 	modified:   assets/css/main.css.map 	modified:   assets/css/scss/main.scss 	new file:   assets/img/resently-top/img1.svg 	new file:   assets/img/resently-top/img2.svg 	new file:   assets/img/resently-top/img3.svg 	modified:   assets/js/main.js 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </header>
     <section class="main">
         <div class="container">
-            <di v class="wrapper">
+            <div class="wrapper">
                 <div class="content-wrapper">
                     <div class="hero">
                         <div class="hero__title">
@@ -228,7 +228,7 @@
                         </div>
                     </div>
                 </div>
-            </di>
+            </div>
         </div>
     </section>
     <section class="supports">
@@ -316,13 +316,112 @@
                 </div>
             </div>
             <div class="visible"></div>
+            <div class="wrapper-btn">
+                <div class="hero__btn">
+                    <a href="#">
+                        <p>
+                            Connect Wallet
+                        </p>
+                    </a>
+                </div>
+            </div>
         </div>
-
-
     </section>
     <section class="selectors">
         <div class="container">
-
+            <div class="wrapper">
+                <div class="recently">
+                    <div class="recently__title">
+                        <h2>
+                            Explore Recently listed
+                        </h2>
+                    </div>
+                    <div class="recently__subtitle">
+                        <p>
+                            Amet minim mollit non deserunt ullamco
+                            est sit aliqua dolor do amet sint.
+                            Velit officia consequat.
+                        </p>
+                    </div>
+                </div>
+                <div class="resently-top content-wrapper">
+                    <div class="resently-top__item">
+                        <div class="resently-top__item-number third">
+                            <h3>
+                                #15626
+                            </h3>
+                        </div>
+                        <div class="wrapper-name">
+                            <div class="wrapper-name__title">
+                                <div class="name">
+                                    <p>Random Name</p>
+                                </div>
+                                <div class="cost">
+                                    <p> Best Bid</p>
+                                </div>
+                            </div>
+                            <div class="wrapper-name__subtitle">
+                                <div class="name_id">
+                                    <p>#4472346</p>
+                                </div>
+                                <div class="cost_max">
+                                    <p>#4472346</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="resently-top__item center">
+                        <div class="resently-top__item-number first">
+                            <h3>
+                                #15626
+                            </h3>
+                        </div>
+                        <div class="wrapper-name">
+                            <div class="wrapper-name__title">
+                                <div class="name">
+                                    <p>Random Name</p>
+                                </div>
+                                <div class="cost">
+                                    <p> Best Bid</p>
+                                </div>
+                            </div>
+                            <div class="wrapper-name__subtitle">
+                                <div class="name_id">
+                                    <p>#4472346</p>
+                                </div>
+                                <div class="cost_max">
+                                    <p>#4472346</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="resently-top__item">
+                        <div class="resently-top__item-number second">
+                            <h3>
+                                #15626
+                            </h3>
+                        </div>
+                        <div class="wrapper-name">
+                            <div class="wrapper-name__title">
+                                <div class="name">
+                                    <p>Random Name</p>
+                                </div>
+                                <div class="cost">
+                                    <p> Best Bid</p>
+                                </div>
+                            </div>
+                            <div class="wrapper-name__subtitle">
+                                <div class="name_id">
+                                    <p>#4472346</p>
+                                </div>
+                                <div class="cost_max">
+                                    <p>#4472346</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
     <section class="footer">
