--- a/index.html
+++ b/index.html
@@ -330,94 +330,112 @@
     <section class="selectors">
         <div class="container">
             <div class="wrapper">
-                <div class="recently">
-                    <div class="recently__title">
-                        <h2>
-                            Explore Recently listed
-                        </h2>
+                <div class="wrapper-recently">
+                    <div class="recently">
+                        <div class="recently__title">
+                            <h2>
+                                Explore Recently listed
+                            </h2>
+                        </div>
+                        <div class="recently__subtitle">
+                            <p>
+                                Amet minim mollit non deserunt ullamco
+                                est sit aliqua dolor do amet sint.
+                                Velit officia consequat.
+                            </p>
+                        </div>
                     </div>
-                    <div class="recently__subtitle">
-                        <p>
-                            Amet minim mollit non deserunt ullamco
-                            est sit aliqua dolor do amet sint.
-                            Velit officia consequat.
-                        </p>
+                    <div class="resently-top content-wrapper">
+                        <div class="resently-top__item">
+                            <div class="resently-top__item-number third">
+                                <h3>
+                                    #15626
+                                </h3>
+                            </div>
+                            <div class="wrapper-name">
+                                <div class="wrapper-name__title">
+                                    <div class="name">
+                                        <p>Random Name</p>
+                                    </div>
+                                    <div class="cost">
+                                        <p> Best Bid</p>
+                                    </div>
+                                </div>
+                                <div class="wrapper-name__subtitle">
+                                    <div class="name_id">
+                                        <p>#4472346</p>
+                                    </div>
+                                    <div class="cost_max">
+                                        <p>#4472346</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="resently-top__item center">
+                            <div class="resently-top__item-number first">
+                                <h3>
+                                    #15626
+                                </h3>
+                            </div>
+                            <div class="wrapper-name">
+                                <div class="wrapper-name__title">
+                                    <div class="name">
+                                        <p>Random Name</p>
+                                    </div>
+                                    <div class="cost">
+                                        <p> Best Bid</p>
+                                    </div>
+                                </div>
+                                <div class="wrapper-name__subtitle">
+                                    <div class="name_id">
+                                        <p>#4472346</p>
+                                    </div>
+                                    <div class="cost_max">
+                                        <p>#4472346</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="resently-top__item">
+                            <div class="resently-top__item-number second">
+                                <h3>
+                                    #15626
+                                </h3>
+                            </div>
+                            <div class="wrapper-name">
+                                <div class="wrapper-name__title">
+                                    <div class="name">
+                                        <p>Random Name</p>
+                                    </div>
+                                    <div class="cost">
+                                        <p> Best Bid</p>
+                                    </div>
+                                </div>
+                                <div class="wrapper-name__subtitle">
+                                    <div class="name_id">
+                                        <p>#4472346</p>
+                                    </div>
+                                    <div class="cost_max">
+                                        <p>#4472346</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="resently-top content-wrapper">
-                    <div class="resently-top__item">
-                        <div class="resently-top__item-number third">
-                            <h3>
-                                #15626
-                            </h3>
+                <div class="wrapper-sell">
+                    <div class="sell">
+                        <div class="sell__title">
+                            <h2>
+                                Create and Sell Your NFTs
+                            </h2>
                         </div>
-                        <div class="wrapper-name">
-                            <div class="wrapper-name__title">
-                                <div class="name">
-                                    <p>Random Name</p>
-                                </div>
-                                <div class="cost">
-                                    <p> Best Bid</p>
-                                </div>
-                            </div>
-                            <div class="wrapper-name__subtitle">
-                                <div class="name_id">
-                                    <p>#4472346</p>
-                                </div>
-                                <div class="cost_max">
-                                    <p>#4472346</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="resently-top__item center">
-                        <div class="resently-top__item-number first">
-                            <h3>
-                                #15626
-                            </h3>
-                        </div>
-                        <div class="wrapper-name">
-                            <div class="wrapper-name__title">
-                                <div class="name">
-                                    <p>Random Name</p>
-                                </div>
-                                <div class="cost">
-                                    <p> Best Bid</p>
-                                </div>
-                            </div>
-                            <div class="wrapper-name__subtitle">
-                                <div class="name_id">
-                                    <p>#4472346</p>
-                                </div>
-                                <div class="cost_max">
-                                    <p>#4472346</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="resently-top__item">
-                        <div class="resently-top__item-number second">
-                            <h3>
-                                #15626
-                            </h3>
-                        </div>
-                        <div class="wrapper-name">
-                            <div class="wrapper-name__title">
-                                <div class="name">
-                                    <p>Random Name</p>
-                                </div>
-                                <div class="cost">
-                                    <p> Best Bid</p>
-                                </div>
-                            </div>
-                            <div class="wrapper-name__subtitle">
-                                <div class="name_id">
-                                    <p>#4472346</p>
-                                </div>
-                                <div class="cost_max">
-                                    <p>#4472346</p>
-                                </div>
-                            </div>
+                        <div class="sell__btn-all">
+                            <a href="#">
+                                <p>
+                                    See All
+                                </p>
+                            </a>
                         </div>
                     </div>
                 </div>
