modified:   assets/css/main.css 	modified:   assets/css/main.css.map 	modified:   assets/css/scss/_normalize.scss 	modified:   assets/css/scss/_variables.scss 	modified:   assets/css/scss/main.scss 	new file:   assets/img/sell-NTFs/img1.png 	new file:   assets/img/sell-NTFs/img2.png 	new file:   assets/img/sell-NTFs/img3.png 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
                     </div>
                     <div class="resently-top content-wrapper">
                         <div class="resently-top__item">
-                            <div class="resently-top__item-number third">
+                            <div class="resently-top__item-number second">
                                 <h3>
                                     #15626
                                 </h3>
@@ -396,8 +396,8 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="resently-top__item">
-                            <div class="resently-top__item-number second">
+                        <div class="resently-top__item last">
+                            <div class="resently-top__item-number third">
                                 <h3>
                                     #15626
                                 </h3>
@@ -430,12 +430,59 @@
                                 Create and Sell Your NFTs
                             </h2>
                         </div>
-                        <div class="sell__btn-all">
+                        <div class="btn">
                             <a href="#">
                                 <p>
                                     See All
                                 </p>
                             </a>
+                        </div>
+                    </div>
+                    <div class="sell-NTFs content-wrapper">
+                        <div class="sell-NTFs__item">
+                            <div style="margin-top:-5rem;">
+                                <div class="sell-NTFs__title second">
+                                    <p>
+                                        Set up your wallet
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="sell-NTFs__subtitle">
+                                <p>
+                                    Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
+                                    Velit officia consequat duis enim velit mollit.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="sell-NTFs__item center">
+                            <div style="margin-top:-5rem;">
+                                <div class="sell-NTFs__title first">
+                                    <p>
+                                        Set up your wallet
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="sell-NTFs__subtitle">
+                                <p>
+                                    Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
+                                    Velit officia consequat duis enim velit mollit.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="sell-NTFs__item last">
+                            <div style="margin-top:-5rem;">
+                                <div class="sell-NTFs__title third">
+                                    <p>
+                                        Set up your wallet
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="sell-NTFs__subtitle">
+                                <p>
+                                    Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
+                                    Velit officia consequat duis enim velit mollit.
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -444,7 +491,120 @@
     </section>
     <section class="footer">
         <div class="container">
-
+            <div class="wrapper">
+                <div class="content-wrapper">
+                    <div class="sing-up">
+                        <div class="sing-up__title">
+                            <h3>
+                                Join our weekly digest!
+                            </h3>
+                        </div>
+                        <div class="sing-up__subtitle">
+                            <p>
+                                Get exclusive promotions & updates straight to your inbox.
+                            </p>
+                        </div>
+                        <form action="#" class="send">
+                            <input type="email" placeholder="Enter your email">
+                            <input type="submit">
+                            <div class="btn">
+                                <a href="#">
+                                    <p>
+                                        Sign Up
+                                    </p>
+                                </a>
+                            </div>
+                        </form>
+                    </div>
+                    <ul class="link-footer">
+                        <li class="link-footer__title">
+                            <a href="#">
+                                <p>
+                                    Features
+                                </p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <p>Banking</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <p>Device</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <p>Platform</p>
+                            </a>
+                        </li>
+                    </ul>
+                    <ul class="link-footer">
+                        <li class="link-footer__title">
+                            <a href="#">
+                                <p>
+                                    Products
+                                </p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <p>About Us</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <p>Sale NFT</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <p>Wallet</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <p>Marketplace</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <p>NFT Token</p>
+                            </a>
+                        </li>
+                    </ul>
+                    <ul class="link-footer">
+                        <li class="link-footer__title">
+                            <a href="#">
+                                <p>
+                                    Resources
+                                </p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <p>Help Center</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <p>Partner</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <p>Blog</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <p>Newsletter</p>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </section>
 </body>
