modified:   assets/css/main.css 	modified:   assets/css/main.css.map 	modified:   assets/css/scss/main.scss 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="resently-top__item last">
+                        <div class="resently-top__item">
                             <div class="resently-top__item-number third">
                                 <h3>
                                     #15626
@@ -469,7 +469,7 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="sell-NTFs__item last">
+                        <div class="sell-NTFs__item">
                             <div style="margin-top:-5rem;">
                                 <div class="sell-NTFs__title third">
                                     <p>
